Sat Oct 30 09:17:36 UTC 2010  Olli Savia  <ops@iki.fi>

        * orbsvcs/orbsvcs/Trader/Constraint_Visitors.cpp:
          Use ACE::is_equal() to compare floating point values.

Fri Oct 29 14:40:48 UTC 2010  Olli Savia  <ops@iki.fi>

        * orbsvcs/orbsvcs/Log/Log_Constraint_Visitors.cpp:
        * orbsvcs/orbsvcs/Notify/Notify_Constraint_Visitors.cpp:
          Removed LynxOS specific hacks.

Fri Oct 29 12:03:44 UTC 2010  Olli Savia  <ops@iki.fi>

        * tao/DynamicAny/DynAny_i.cpp:
        * tao/ETCL/TAO_ETCL_Constraint.cpp:
          Use ACE::is_equal() to compare floating point values.

Fri Oct 29 12:02:11 UTC 2010  Olli Savia  <ops@iki.fi>

        * orbsvcs/orbsvcs/Trader/Constraint_Nodes.cpp:
        * orbsvcs/performance-tests/LoadBalancing/LBPerf/RPS/server.cpp:
          Use ACE::is_equal() to compare floating point values.

Fri Oct 29 08:25:58 UTC 2010  Johnny Willemsen  <jwillemsen@remedy.nl>

        * tests/IDL_Test/IDL_Test.mpc:
          Disable 3312 generated files with rti

Thu Oct 28 12:19:07 UTC 2010  Johnny Willemsen  <jwillemsen@remedy.nl>

        * tests/IDL_Test/Bug_3312_Regression.idl:
        * tests/IDL_Test/IDL_Test.mpc:
          Added test for 3312, doesn't seem to be fixed yet

Thu Oct 28 08:26:46 UTC 2010  Vladimir Zykov  <vladimir.zykov@prismtech.com>

        * tests/Bug_3755_Ext_Regression/run_test.pl:
        * bin/tao_orb_tests.lst:
          Disabled in e_micro and e_compact builds parts of this test
          that are not built in those configurations.

Thu Oct 28 07:57:33 UTC 2010  Johnny Willemsen  <jwillemsen@remedy.nl>

        * tao/Utils/Server_Main.h:
        * tao/Utils/Server_Main.cpp:
          Fixed compile errors

Thu Oct 28 07:51:17 UTC 2010  Johnny Willemsen  <jwillemsen@remedy.nl>

        * orbsvcs/DevGuideExamples/EventServices/RTEC_MCast_Federated/EchoEventSupplierMain.cpp:
        * orbsvcs/examples/ImR/Advanced/TestServer.h:
        * orbsvcs/examples/RtEC/MCast/MCast.cpp: